app/static/css/custom.css
/* ... */
.support-action-share {
    display: inline-block;
}
.support-action-share a,
.support-action-share a:hover, 
.support-action-share a:active,
.support-action-share a:focus {
    text-decoration: none;
}
.support-action-modal-description {
    min-height: 180px;
}


/* Posts 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.post {
    -moz-box-shadow: 0 0 10px #e5e5e5;
    -webkit-box-shadow: 0 0 10px #e5e5e5;
    box-shadow: 0 0 10px #e5e5e5;
    padding: 1em;
    margin: 1.25rem 0 1.75rem 0;
}
.post small a {
    margin-top: 3px;
}
.post article h1, .comment article h1, 
.post article h2, .comment article h2,
.post article h3, .comment article h3,
.post article h4, .comment article h4 {
    font-weight: bold;
    font-size: larger;
}
.post .post-image-thumbnail {
    vertical-align: top;
    margin-right: 1em;
}
@media (min-width: 550px) {
    .post-full-view {
        display: block;
        min-height: 299px;
    }
}
.post-box {
    display: flex;
    flex-direction: row;
}
.post-box textarea {
    flex: auto;
    min-height: 2em;
}
#post {
    margin-bottom: 0;
}
#post #preview ul {
    margin-left: 0;
}
#post #preview li,
#post #preview > p {
    display: inline-block;
    margin-right: 1em;
    list-style-type: none;
}
#post #preview img {
    height: 64px;
    order: 1;
    vertical-align: -67%;
}
#post #preview p {
    line-height: 20px;
    padding: 0 10px;
    font-size: small;
}
#post #save {
    width: 100px;
}
.posting-unauthorized {
    display: block;
    background-color: #fbfaf9;
    padding: 1em;
}
.post-comment-count {
    margin-left: 0.8em;
}


/* Footer 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.footer {
    display: block;
    width: 100%;
    margin-top: 3rem;
    padding: 3rem 0;
    background: #161310;
    color: #fff;
}
.footer small {
    color: #fff;
}
.footer a {
    text-decoration: none;
}
.footer a:hover {
    text-decoration: underline;
}
.footer ul li {
    list-style-type: none;
}


/* Navigation 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
#scrollspy {
    display: inline-block;
}
.nav-tabs-container {
    border-bottom: 1px solid #e5e5e5;
    margin-bottom: 1em;
}
.nav-stacked-fixed {
    position: fixed;
    top: 6em;
}
.nav {
    padding-left: 0;
    margin-bottom: 0;
    margin-left: 0;
    list-style: none;
    display: inline-block;
}
.nav > li {
    position: relative;
    display: block;
}
.nav > li > a {
    position: relative;
    display: block;
    padding: 10px 10px;
}
.nav > li > a:hover,
.nav > li > a:focus {
    text-decoration: none;
    background-color: #fbfaf9;
}
.nav > li.disabled > a {
    color: #524535;
}
.nav > li.disabled > a:hover,
.nav > li.disabled > a:focus {
    color: #524535;
    text-decoration: none;
    cursor: not-allowed;
    background-color: transparent;
}
.nav-stacked {
    width: 100%;
}
.nav-tabs > li {
    float: left;
    margin-bottom: -3px;
}
.nav-tabs > li > a {
    line-height: 2.8;
    height: 4.5rem;
    text-decoration: none;
}

.nav-stacked > li > a {
    line-height: 1.8;
    height: 2.5rem;
    text-decoration: none;
    font-size: 1.5rem;
}
.nav-tabs > li > a:hover
.nav-stacked > li > a:hover {
    color: #fbfaf9;
}
.nav-tabs > li.active > a,
.nav-tabs > li.active > a:hover,
.nav-tabs > li.active > a:focus {
    font-weight: 600;
    text-decoration: underline;
}
@media (min-width: 1000px) {
    .nav-tabs > li.active > a,
    .nav-tabs > li.active > a:hover,
    .nav-tabs > li.active > a:focus {
        text-decoration: none;
        border-bottom-style: solid;
        border-bottom-color: #3299bb;
        border-radius: 3px;
    }
}
.nav-stacked > li.active > a,
.nav-stacked > li.active > a:hover,
.nav-stacked > li.active > a:focus {
    font-weight: 600;
    margin-right: 0;
    margin-left: 0;
    background-color: #fff;
    border-left-style: solid;
    border-left-color: #3299bb;
}
.nav-tabs.nav-horizontal > li.active > a,
.nav-tabs.nav-horizontal > li.active > a:hover,
.nav-tabs.nav-horizontal > li.active > a:focus, 
.nav-stacked.nav-horizontal > li.active > a,
.nav-stacked.nav-horizontal > li.active > a:hover,
.nav-stacked.nav-horizontal > li.active > a:focus {
    border-width: 3px;
}
.nav-tabs.nav-secondary > li.active > a,
.nav-tabs.nav-secondary > li.active > a:hover,
.nav-tabs.nav-secondary > li.active > a:focus,
.nav-stacked.nav-secondary > li.active > a,
.nav-stacked.nav-secondary > li.active > a:hover,
.nav-stacked.nav-secondary > li.active > a:focus {
    border-width: 1px;
}
.nav-social img {
    margin-top: 0.5em;
}


/* Modals 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.modal {
    visibility: hidden;
    overflow-x: hidden;
    overflow-y: scroll;
    position: fixed;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;
    z-index: 1000;
    text-align: center;
    background-color: #000;
    background: url(../images/transparent-pixel.png);
}
.modal h3 {
    width: 94%;
}
.modal .oi {
    color: #ff9900;
    font-size: 0.8em;
}
.modal div {
    width: 90%;
    margin: 100px auto;
    padding: 15px;
    background-color: #fff;
    /*border-radius: 4px;*/
    border: 3px solid #ff9900;
    text-align: left;
}
@media (min-width: 1000px) {
    .modal div {
        width: 50%;
    }
}


/* Input 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
input[type="file"] {
    display: none;
}
input[type="email"],
input[type="number"],
input[type="search"],
input[type="text"],
input[type="tel"],
input[type="url"],
input[type="password"],
textarea,
select {
    border: 1px solid #e5e5e5;
    color: #161310;
}
input[type="email"]:focus,
input[type="number"]:focus,
input[type="search"]:focus,
input[type="text"]:focus,
input[type="tel"]:focus,
input[type="url"]:focus,
input[type="password"]:focus,
textarea:focus,
select:focus {
    border-color: #3299bb;
}
.button, 
button,
input[type="submit"],
input[type="reset"],
input[type="button"] {
    color: #3299bb;
    border-color: #3299bb;
    background-color: #fbfaf9;
}
/* ... */

